@@ -24,8 +24,9 @@ import org.labkey.test.Locator;
 import org.labkey.test.TestFileUtils;
 import org.labkey.test.TestTimeoutException;
 import org.labkey.test.categories.DailyC;
-import org.labkey.test.components.DomainDesignerPage;
+import org.labkey.test.pages.experiment.UpdateSampleSetPage;
 import org.labkey.test.params.FieldDefinition;
+import org.labkey.test.params.experiment.SampleSetDefinition;
 import org.labkey.test.util.DataRegionTable;
 import org.labkey.test.util.ListHelper;
 import org.labkey.test.util.PortalHelper;
@@ -101,12 +102,12 @@ public class FileAttachmentColumnTest extends BaseWebDriverTest
     {
         beginAt("/project/" + getProjectName() +"/"+ FOLDER_NAME + "/begin.view?");
         clickTab("Portal");
-        ListHelper listHelper = new ListHelper(getDriver());
 
+        ListHelper listHelper = new ListHelper(getDriver());
         listHelper.createList(getProjectName() + "/" + FOLDER_NAME, LIST_NAME, ListHelper.ListColumnType.AutoInteger, LIST_KEY,
                 new ListHelper.ListColumn("Name", "Name", ListHelper.ListColumnType.String),
                 new ListHelper.ListColumn("File", "File", ListHelper.ListColumnType.Attachment));
-        clickButton("Done");
+        goToManageLists();
         listHelper.click(Locator.linkContainingText(LIST_NAME));
         // todo: import actual data here
         Map<String, String> csvRow = new HashMap<>();
@@ -138,14 +139,14 @@ public class FileAttachmentColumnTest extends BaseWebDriverTest
         log("adding sample set with file column");
 
         SampleSetHelper sampleHelper = new SampleSetHelper(this);
-        sampleHelper.createSampleSet(SAMPLESET_NAME, null, Map.of("color", FieldDefinition.ColumnType.String), Collections.singletonList(Map.of("Name", "ed", "color", "green")));
+        sampleHelper.createSampleSet(new SampleSetDefinition(SAMPLESET_NAME).setFields(List.of(new FieldDefinition("color", FieldDefinition.ColumnType.String))), Collections.singletonList(Map.of("Name", "ed", "color", "green")));
 
         // add a 'file' column
         log("editing fields for sample set");
         clickFolder(FOLDER_NAME);
-        DomainDesignerPage domainDesignerPage = sampleHelper.goToEditSampleSetFields(SAMPLESET_NAME);
-        domainDesignerPage.fieldsPanel().addField(new FieldDefinition("File", FieldDefinition.ColumnType.File));
-        domainDesignerPage.clickFinish();
+        UpdateSampleSetPage updatePage = sampleHelper.goToEditSampleSet(SAMPLESET_NAME);
+        updatePage.addFields(List.of(new FieldDefinition("File", FieldDefinition.ColumnType.File)));
+        updatePage.clickSave();
 
         StringBuilder sb = new StringBuilder("Name\tcolor\tfile\n");
         for (File file : DATAFILE_DIRECTORY.listFiles())
